Fix non-method-reference